syntax = "proto3";

option go_package = "./genproto/tutorial";

message Address {
    string street = 1;
    string city = 2;
    string zipcode = 3;
}

message PhoneNumber {
    string number = 1;
    string type = 2;
}

message User {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    string email = 4;
    Address address = 5;
    repeated PhoneNumber phone_numbers = 6;
    string occupation = 7;
    string company = 8;
    bool is_active = 9;
}

message CreateUserRequest {
    string name = 1;
    int32 age = 2;
    string email = 3;
    Address address = 4;
    repeated PhoneNumber phone_numbers = 5;
    string occupation = 6;
    string company = 7;
    bool is_active = 8;
}

message GetUserResponse {
    User user = 1;
}

message ListUsersResponse {
    repeated User users = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (GetUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc ListUsers(google.protobuf.Empty) returns (ListUsersResponse);
}

message GetUserRequest {
    int32 id = 1;
}
